# guarded-rag-assistant

./: .env.template  .gitignore  CHANGELOG.md  README.md  Taskfile.yaml  pyproject.toml  quickstart.py  requirements-extra.txt  requirements.txt
.github/workflows/: e2e-static-checks.yml  python-deps-install-test.yml  python-static-checks.yml
deployment_diy_rag/: README.md  requirements.txt
docsassist/: predict.py
frontend/: app.py  pyproject.toml  requirements.txt  telemetry.py
infra/: __main__.py  settings_generative.py  settings_main.py
