[project]
name = "docsassist"
version = "0.4.2"
description = "Guarded RAG Assistant — DataRobot application template"
requires-python = ">=3.10, <3.13"

dependencies = [
    "pulumi==3.153.0",
    "pulumi-datarobot>=0.10.22",
    "datarobot-pulumi-utils>=0.0.2.post3,<0.1",
    "datarobot>=3.9.1,<4.0.0",
    "datarobot-predict>=1.9.6,<1.10",
    "pydantic>=2.9.2,<2.10",
    "pydantic-settings>=2.5.2,<2.6",
    "eval_type_backport>=0.2.0,<0.3",
    # Constrained by datarobot-drum
    "pandas>=2.0.3,<3",
    "streamlit>=1.39.0,<2",
    "st-theme>=1.2.3,<2",
    "joblib>=1.4.2,<2",
    "openai>=1.47.1,<2",
    "jupyterlab>=4.2.5,<5",
    "papermill>=2.6.0,<3",
    "babel>=2.16,<3",
    "google-auth",
    "boto3",
    "boto3-stubs",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp-proto-http>=1.22.0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "mypy==1.11.2",
    "types-PyYAML==6.0.12.20250809",
    "ruff==0.6.9",
    "pandas-stubs>=2.2.3.250308",
]
rag-diy = [
    # Constrained by moderations dependencies
    "langchain<0.3",
    "langchain-openai<0.2",
    "langchain-community<0.3",
    "langchain-huggingface<0.1",
    "transformers==4.49.0",  # https://github.com/huggingface/transformers/issues/37311
    "faiss-cpu>=1.8.0,<1.9",
    "opencv-contrib-python-headless>=4.8.1.78,<5",
    "unstructured[all-docs]>=0.16.3,<0.17",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"


[tool.mypy]
plugins = "pydantic.mypy"
mypy_path = ["frontend"]
strict = true
exclude = """(?x)(
    output/ # exclude files starting with "output"
    | deployment_.*/
    | include/   # or files starting with "include."
    | venv/
    | .venv/
    | .cache
    | tests/
    | e2e/
  )"""
python_version = "3.11"
untyped_calls_exclude = "google"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = "ignore-without-code"
implicit_reexport = true
ignore_missing_imports = false
no_implicit_optional = true
show_column_numbers = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "datarobot.*"
implicit_reexport = true

[[tool.mypy.overrides]] # papermill is untyped
module = "papermill.*"
ignore_missing_imports = true

[[tool.mypy.overrides]] # streamlit_theme is untyped
module = "streamlit_theme.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = "tests/e2e"

[tool.uv]
package = false
