[project]
name = "docsassist-frontend"
version = "0.4.2"
description = "Guarded RAG Assistant — Streamlit frontend"
requires-python = ">=3.10, <3.13"

dependencies = [
    "datarobot>=3.9.1,<4.0.0",
    "pandas==2.2.0",
    "requests>=2.33.0",
    "streamlit>=1.54.0,<2",
    "st-theme>=1.2.3,<2",
    "langchain-core>=0.3.80",
    "datarobot-predict>=1.9.6",
    "pydantic-settings==2.5.2",
    "pydantic==2.9.2",
    "openai>=1.47.1,<2",
    "babel==2.16.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp-proto-http>=1.22.0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
]

[tool.uv]
package = false
